[metadata]
name = mtweepy
version = 0.0.1
author = Souvic Chakraborty
author_email = chakra.souvic@gmail.com
description = Provides a basic package structure
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Souvic/mtweepy.git
project_urls =
    Bug Tracker = https://github.com/Souvic/mtweepy.git/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	requests>=2.25.1
	requests_oauthlib>=1.3.0
	tweepy>=3.10.0
	
[options.packages.find]
where = src

